logs/vcab.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Absinthe-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_uWSGI_WebSocket-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/GitPython-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/absinthe'...
Listing './lib/python3.5/site-packages/absinthe/tools'...
Compiling './lib/python3.5/site-packages/absinthe/tools/background_process_handler.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/background_process_handler.py", line 69
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/absinthe/tools/daemon.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/daemon.py", line 34
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/absinthe/tools/linux'...
Compiling './lib/python3.5/site-packages/absinthe/tools/utils.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/utils.py", line 112
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/absinthe/tools/win'...
Compiling './lib/python3.5/site-packages/absinthe/tools/win/service.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/win/service.py", line 50
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/absinthe/tools/win/window_manager.py'...
***   File "./lib/python3.5/site-packages/absinthe/tools/win/window_manager.py", line 30
    if threading.currentThread().getName() <> 'MainThread':
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/bunch'...
Listing './lib/python3.5/site-packages/bunch-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_uwsgi_websocket'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Compiling './lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py'...
***   File "./lib/python3.5/site-packages/geventwebsocket/protocols/wamp.py", line 175
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pyjsonrpc'...
Compiling './lib/python3.5/site-packages/pyjsonrpc/http.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/http.py", line 123
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyjsonrpc/rpclib.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/rpclib.py", line 119
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_jsonrpc-0.7.12.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/uWSGI-2.0.15.egg-info'...
Listing './lib/python3.5/site-packages/vcab'...
Listing './lib/python3.5/site-packages/vcab-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/vcp'...
Compiling './lib/python3.5/site-packages/vcp/commands.py'...
***   File "./lib/python3.5/site-packages/vcp/commands.py", line 96
    print repo_path, search
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vcp-2.9.0.egg-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_api-2.1.10.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './lib/python3.5/site-packages/virtualenvapi'...
Listing './lib/python3.5/site-packages/voidpp_tools'...
Listing './lib/python3.5/site-packages/voidpp_tools/mocks'...
Listing './lib/python3.5/site-packages/voidpp_tools/mocks/file_system'...
Listing './lib/python3.5/site-packages/voidpp_tools-1.10.0.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
